--- a/MainMenu.html
+++ b/MainMenu.html
@@ -10,31 +10,14 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <style>
-        @keyframes fadeIn {
-          from {opacity: 0}
-          to {opacity: 1}
-        }
-
-        .FadeInTitle {
-          opacity: 0;
-          animation: fadeIn 2s forwards;
-
+        .Title {
           font-family:'Brush Script MT', cursive;
           color:#000000;
           font-size:32px;
           display: inline;
         }
 
-        #s0 {animation-delay: 0s;}
-        #s2 {animation-delay: 0s;}
-        #s4 {animation-delay: 0s;}
-        #s6 {animation-delay: 0s;}
-        #s10 {animation-delay: 0s;}
-
-        .FadeInButton {
-          opacity: 0;
-          animation: fadeIn 2s forwards;
-
+        .Button {
           background-color: #FFB2D0;
           padding: 10px;
           border-radius: 5px;
@@ -50,6 +33,8 @@
     </style>
   </head>
   <body style="background-color:#B0E0E6;">
-    <b><p id="s0" class="FadeInTitle">Yo </p></b>
+    <b><p class="Title">Buxton is Strange </p></b>
+    <p class="Title"> an interactive adventure</p>
+    <button class="Button">Chapter 1</button>
   </body>
 </html>
