--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         
     </style>
   </head>
-  <body style="background-color:#B0E0E6;">
+  <body style="background-color:#B0E0E6;border: 25px solid #B0E0E6;">
     <b><p id="s0" class="FadeInTitle">Buxton </p></b>
     <b><p id="s2" class="FadeInTitle">is </p></b>
     <b><p id="s4" class="FadeInTitle">strange... </p></b>
