--- a/MainMenu.html
+++ b/MainMenu.html
@@ -31,9 +31,9 @@
         
     </style>
   </head>
-  <body style="background-color:#B0E0E6;">
+  <body style="background-color:#B0E0E6;border: 25px solid #B0E0E6;">
     <b><p class="Title">Buxton is Strange </p></b>
-    <p class="Title"> an interactive adventure</p>
+    <p class="Title"> <i>(an interactive adventure)</i></p>
     <button class="Button">Chapter 1</button>
   </body>
 </html>
