--- a/MainMenu.html
+++ b/MainMenu.html
@@ -10,10 +10,16 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <style>
-        .Title {
+        .Title1 {
           font-family:'Brush Script MT', cursive;
           color:#000000;
           font-size:64px;
+        }
+
+        .Title2 {
+          font-family:'Brush Script MT', cursive;
+          color:#000000;
+          font-size:32px;
         }
 
         .Button {
@@ -26,14 +32,14 @@
         
           font-family:'Brush Script MT', cursive;
           color:#000000;
-          font-size:64px;
+          font-size:48px;
         }
         
     </style>
   </head>
   <body style="background-color:#B0E0E6;border: 25px solid #B0E0E6;">
-    <b><p class="Title">Buxton is Strange </p></b>
-    <p class="Title"> <i>(an interactive adventure)</i></p>
+    <b><p class="Title1">Buxton is Strange </p></b>
+    <p class="Title2"> <i>(an interactive adventure)</i></p>
     <button class="Button">Chapter 1</button>
   </body>
 </html>
