im so good at css

--- a/MainMenu.html
+++ b/MainMenu.html
@@ -9,37 +9,10 @@
     </title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
-    <style>
-        .Title1 {
-          font-family:'Brush Script MT', cursive;
-          color:#000000;
-          font-size:64px;
-        }
-
-        .Title2 {
-          font-family:'Brush Script MT', cursive;
-          color:#000000;
-          font-size:32px;
-        }
-
-        .Button {
-          background-color: #FFB2D0;
-          padding: 10px;
-          border-radius: 5px;
-          -moz-border-radius: 10px;
-          -webkit-border-radius: 10px;
-          margin:10px;
-        
-          font-family:'Brush Script MT', cursive;
-          color:#000000;
-          font-size:48px;
-        }
-        
-    </style>
   </head>
-  <body style="background-color:#B0E0E6;border: 25px solid #B0E0E6;">
+  <body>
     <b><p class="Title1">Buxton is Strange </p></b>
     <p class="Title2"> <i>(an interactive adventure)</i></p>
-    <button class="Button">Chapter 1</button>
+    <button class="Button1">Chapter 1</button>
   </body>
 </html>
