--- a/index.html
+++ b/index.html
@@ -9,53 +9,14 @@
     </title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
-    <style>
-        @keyframes fadeIn {
-          from {opacity: 0}
-          to {opacity: 1}
-        }
-
-        .FadeInTitle {
-          opacity: 0;
-          animation: fadeIn 2s forwards;
-
-          font-family:'Brush Script MT', cursive;
-          color:#000000;
-          font-size:64px;
-          display: inline;
-        }
-
-        #s0 {animation-delay: 0s;}
-        #s2 {animation-delay: 2s;}
-        #s4 {animation-delay: 4s;}
-        #s6 {animation-delay: 6s;}
-        #s10 {animation-delay: 10s;}
-
-        .FadeInButton {
-          opacity: 0;
-          animation: fadeIn 2s forwards;
-
-          background-color: #FFB2D0;
-          padding: 10px;
-          border-radius: 5px;
-          -moz-border-radius: 10px;
-          -webkit-border-radius: 10px;
-          margin:10px;
-        
-          font-family:'Brush Script MT', cursive;
-          color:#000000;
-          font-size:64px;
-        }
-        
-    </style>
   </head>
-  <body style="background-color:#B0E0E6;border: 25px solid #B0E0E6;">
-    <b><p id="s0" class="FadeInTitle">Buxton </p></b>
-    <b><p id="s2" class="FadeInTitle">is </p></b>
-    <b><p id="s4" class="FadeInTitle">strange... </p></b>
+  <body>
+    <b><p id="s0" class="FadeInTitle1">Buxton </p></b>
+    <b><p id="s2" class="FadeInTitle1">is </p></b>
+    <b><p id="s4" class="FadeInTitle1">strange... </p></b>
     <br><br>
-    <img width="500px" height="auto" id="s6" class="FadeInTitle" src="p1.jpg">
+    <img width="250px" height="auto" id="s6" class="FadeInTitle1" src="snow1.jpg">
     <br><br>
-    <button id="s10" class="FadeInButton" onclick="window.location.href = 'MainMenu.html';">Play</button>
+    <button id="s10" class="FadeInButton1" onclick="window.location.href = 'MainMenu.html';">Play</button>
   </body>
 </html>
