--- a/MainMenu.html
+++ b/MainMenu.html
@@ -13,6 +13,6 @@
   <body>
     <b><p class="Title1">Buxton is Strange </p></b>
     <p class="Title2"> <i>(an interactive adventure)</i></p>
-    <button class="Button2" onclick="window.location.href = 'Chapter1.html';">Chapter 1</button>
+    <button class="Button2" onclick="window.location.href = 'Chapter1-1.html';">Chapter 1</button>
   </body>
 </html>
