--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <b><p id="s2" class="FadeInTitle1">is </p></b>
     <b><p id="s4" class="FadeInTitle1">strange... </p></b>
     <br><br>
-    <img width="250px" height="auto" id="s6" class="FadeInTitle1" src="snow1.jpg">
+    <img width="250px" height="auto" id="s6" class="FadeInPicture1" src="snow1.jpg">
     <br><br>
     <button id="s10" class="FadeInButton1" onclick="window.location.href = 'MainMenu.html';">Play</button>
   </body>
