--- a/MainMenu.html
+++ b/MainMenu.html
@@ -15,5 +15,6 @@
     <p class="Title2"> <i>(an interactive adventure)</i></p>
     <p class="Title2"> <i>(starring Tilly)</i></p>
     <button class="Button2" onclick="window.location.href = 'Chapter1-1.html';">Chapter 1</button>
+    <button class="Button2" onclick="window.location.href = 'Chapter2-1.html';">Chapter 1</button>
   </body>
 </html>
