--- a/MainMenu.html
+++ b/MainMenu.html
@@ -16,5 +16,6 @@
     <p class="Title2"> <i>(starring Tilly)</i></p>
     <button class="Button2" onclick="window.location.href = 'Chapter1-1.html';">Chapter 1</button>
     <button class="Button2" onclick="window.location.href = 'Chapter2-1.html';">Chapter 2</button>
+    <button class="Button2" onclick="window.location.href = 'Chapter3-1.html';">Chapter 2</button>
   </body>
 </html>
