--- a/MainMenu.html
+++ b/MainMenu.html
@@ -17,5 +17,6 @@
     <button class="Button2" onclick="window.location.href = 'Chapter1-1.html';">Chapter 1</button>
     <button class="Button2" onclick="window.location.href = 'Chapter2-1.html';">Chapter 2</button>
     <button class="Button2" onclick="window.location.href = 'Chapter3-1.html';">Chapter 3</button>
+    <button class="Button2" onclick="window.location.href = 'Chapter4-1.html';">Chapter 4</button>
   </body>
 </html>
